# jax-rl-playground

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  requirements.txt
examples/: playground_starter.ipynb  purejaxrl-walkthrough.ipynb  test.py
examples/ppo/: train_ppo_on_cartpole.py
playground/: viz_brax.py  viz_gymnax.py
src/agents/: __init__.py  base_policy.py
src/agents/dqn/: policy.py
src/logger/: __init__.py  logger.py
src/training/: __init__.py  networks.py  ppo.py  trainer.py
